cluster/speedtest/speedtest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/auth-url: "https://gate.sko.ai/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://gate.sko.ai"
spec:
  rules:
  - host: st.sko.ai
    http:
      paths:
      - backend:
          serviceName: speedtest
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - st.sko.ai
    secretName: ingress-cert-syncthing
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  annotations:
    external-dns.alpha.kubernetes.io/hostname: speedtest.int.juicebot.net
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: speedtest
  type: LoadBalancer
  loadBalancerIP: 192.168.1.203
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
spec:
  selector:
    matchLabels:
      app: speedtest
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
      # This is the only image they have..
      - image: openspeedtest/latest:speedtest
        name: speedtest
        ports:
        - containerPort: 8080
          name: speedtest
